--- a/styles.css
+++ b/styles.css
@@ -1,184 +1,87 @@
-:root {
-  --white: #fff;
-  --light-grey: #f5f6f7;
-  --dark-grey: #0a0a23;
-  --yellow: #f1be32;
-  --golden-yellow: #feac32;
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  background-color: var(--dark-grey);
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-image: url(https://www.solidbackgrounds.com/images/1080x1920/1080x1920-carolina-blue-solid-color-background.jpg);
+  font-family: sans-serif;
+  padding: 20px;
 }
 
 h1 {
-  color: var(--light-grey);
-  margin: 20px 0 40px 0;
+  font-size: 40px;
+  margin-top: 0;
+  margin-bottom: 15px;
 }
 
-.todo-app {
-  background-color: var(--white);
-  width: 300px;
-  height: 350px;
-  border: 5px solid var(--yellow);
-  border-radius: 8px;
-  padding: 15px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+h2 {
+  font-size: 30px;
 }
 
-.btn {
-  cursor: pointer;
-  width: 100px;
-  margin: 10px;
-  color: var(--dark-grey);
-  background-color: var(--golden-yellow);
-  background-image: linear-gradient(#fecc4c, #ffac33);
-  border-color: var(--golden-yellow);
-  border-width: 3px;
+.established {
+  font-style: italic;
 }
 
-.btn:hover {
-  background-image: linear-gradient(#ffcc4c, #f89808);
+h1,
+h2,
+p {
+  text-align: center;
 }
 
-.large-btn {
+.football enquiries {
   width: 80%;
-  font-size: 1.2rem;
-  align-self: center;
-  justify-self: center;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  max width: 500px;
+  text-align: left;
+  width: 75%;
 }
 
-.close-task-form-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
+img {
+display:block;
+margin-left: auto;
+margin-right: auto;
 }
 
-.close-icon {
-  width: 20px;
-  height: 20px;
-}
-
-.task-form {
-  display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: var(--white);
-  border-radius: 5px;
-  padding: 15px;
-  width: 300px;
-  height: 350px;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: auto;
-}
-
-.task-form-header {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.task-form-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.task-form-footer {
-  display: flex;
-  justify-content: center;
-}
-
-.task-form-label,
-#title-input,
-#date-input,
-#description-input {
-  display: block;
-}
-
-.task-form-label {
+.item p {
+  display: inline-block;
+  margin-top: 5px;
   margin-bottom: 5px;
-  font-size: 1.3rem;
-  font-weight: bold;
+  font-size: 18px;
+}
+.price {
+text-align: right;
+width: 25%;
 }
 
-#title-input,
-#date-input,
-#description-input {
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 2px;
+.bottom-line {
+margin-top: 25px;
 }
 
-#confirm-close-dialog {
-  padding: 10px;
-  margin: 10px auto;
-  border-radius: 15px;
+footer {
+font-size: 14px;
 }
 
-.confirm-close-dialog-btn-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
+.address {
+margin-bottom: 5px;
 }
 
-.discard-message-text {
-  font-weight: bold;
-  font-size: 1.5rem;
+a {
+color: black;
 }
 
-#tasks-container {
-  height: 100%;
-  overflow-y: auto;
+a:visited {
+  color: black;
 }
 
-.task {
-  margin: 5px 0;
+a:hover {
+  color: brown;
 }
 
-.hidden {
-  display: none;
+a:active {
+  color: brown;
 }
 
-@media (min-width: 576px) {
-  .todo-app,
-  .task-form {
-    width: 400px;
-    height: 450px;
-  }
-
-  .task-form-label {
-    font-size: 1.5rem;
-  }
-
-  #title-input,
-  #date-input {
-    height: 2rem;
-  }
-
-  #title-input,
-  #date-input,
-  #description-input {
-    padding: 5px;
-    margin-bottom: 20px;
-  }
+hr {
+  height: 2px;
+  background-color: brown;
+  border-color: brown;
 }
