--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,195 @@
 * {
-  margin: 0px;
-  padding: 0px;
-  font-family: century;
+  margin: 0;
+  padding: 0;
+  font-family: "poppins", sans-serif;
 }
-header {
-  background-image: linear-gradient(
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(https://img.freepik.com/free-vector/blue-curve-background_53876-113112.jpg);
-  height: 100vh;
+
+#banner {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #009688),
+    url(https://previews.123rf.com/images/igoror/igoror1708/igoror170800175/84054560-barber-shop-banner-background.jpg);
   background-size: cover;
   background-position: center;
-  min-height: 100px;
+  height: 100vh;
 }
-ul {
-  float: right;
-  list-style-type: none;
-  margin-top: 30px;
-  min-height: 400px;
-  margin-right: 60px;
-  font-size: 17px;
+
+.logo {
+  width: 140px;
+  position: absolute;
+  top: 4%;
+  left: 10%;
 }
-ul li {
+
+.banner-text {
+  text-align: center;
+  color: #fff;
+  padding-top: 180px;
+}
+
+.banner-text h1 {
+  font-size: 130px;
+  font-family: "Kaushan Script", cursive;
+}
+
+.banner-text p {
+  font-size: 20px;
+  font-style: italic;
+}
+
+.banner-btn {
+  margin: 70px auto 0;
+}
+
+.banner-btn a {
+  width: 150px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 10px;
+  padding: 12px 0;
+  color: #fff;
+  border: 0.5px solid #fff;
+  position: relative;
+  z-index: 1;
+  transition: color 0.5s;
+}
+
+.banner-btn a span {
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: -1;
+  transition: 0.5s;
+}
+
+.banner-btn a:hover span {
+  width: 100%;
+}
+
+.banner-btn a:hover {
+  color: #000;
+}
+
+#sideNav {
+  width: 250px;
+  height: 100vh;
+  position: fixed;
+  right: -250;
+  top: 0;
+  background: #009688;
+  z-index: 2;
+  transition: 0.5s;
+}
+
+nav ul li {
+  list-style: none;
+  margin: 50px 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+#menuBtn {
+  width: 50px;
+  height: 50px;
+  background: #009688;
+  text-align: center;
+  position: fixed;
+  right: 30px;
+  top: 20px;
+  border-radius: 3px;
+  z-index: 3;
+  cursor: pointer;
+}
+
+#menuBtn img {
+  width: 20px;
+  margin-top: 15px;
+}
+
+@media screen and (max-width: 770px;) {
+  .banner-text h1 {
+    font-size: 44px;
+  }
+  .banner-btn a {
+    display: block;
+    margin: 20px;
+  }
+}
+
+#feature {
+  width: 100%;
+  padding: 70px 0;
+}
+
+.title-text {
+  text-align: center;
+  padding-bottom: 70px;
+}
+
+.title-text p {
+  margin: auto;
+  font-size: 20px;
+  color: #009688;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
   display: inline-block;
 }
-ul li a{
-  text-decoration: none;
-  color: #fff
-  padding: 5px 20px;
-  border: 1px solid transparent;
-  transition: 0.5 ease;
+
+.title-text p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587, #fff);
+  position: absolute;
+  top: -20px;
+  left: 0;
+  z-index: -1;
+  transform: rotate(10deg);
+  border-top-left-radius: 35px;
+  border-bottom-right-radius: 35px;
 }
-ul li a:hover{
-  background-color: #fff;
-  color: #000;
+
+.title-text h1 {
+  font-size: 50px;
 }
-ul li.active a{
-   background-color: #fff;
-   color: #000;
-}
-h1 {
+
+.feature-box {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   text-align: center;
 }
-.logo img {
-  float: left;
-  width: 150px;
-  height: auto;
 
+.features {
+  flex-basis: 50%;
 }
-.main{
-  max-width: 1200px;
-  margin: auto;
-}
-.button{
-  position: absolute;
-  top: 54%;
-  left: 50%;
-  transform: translate
-}
-.btn{
-border:1px solid #fff;
-padding: 5px 20px;
-color: #fff;
-transition: 0.5 ease;
-font-size: 18px;
-}
-.btn:hover{
-  background-color: #fff;
-  color: #000;
 
+.features-img {
+  flex-basis: 50%;
+  margin: aiuto;
 }
-.title{
-  position: absolute;
-  top: 47%;
-  left: 50%;
-  transform: translate(-50%,-50%)
+
+.features-img img {
+  width: 70%;
+  border-radius: 10px;
 }
-.tittle h1{
-  color: #fff;
-  font-size: 70px;
+
+.features h1 {
+  text-align: left;
+  margin-bottom: 10px;
+  font-weight: 100px;
+  color: #009688;
+}
+
+.features-desc {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
 }
