--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,185 @@
-* {
+:root {
+  --white: #fff;
+  --light-grey: #f5f6f7;
+  --dark-grey: #0a0a23;
+  --yellow: #f1be32;
+  --golden-yellow: #feac32;
+}
+
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-#banner {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), #009688),
-    url(https://cdntrust.s3.us-east-2.amazonaws.com/images/262f4826-f703-4cec-a295-bc41dee927e3.jpg);
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
+
+body {
+  background-color: var(--dark-grey);
 }
-.logo {
-  width: 140px;
-  position: absolute;
-  top: 4%;
-  left: 10%;
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.banner-text {
-  text-align: center;
-  color: #fff;
-  padding-top: 180px;
+
+h1 {
+  color: var(--light-grey);
+  margin: 20px 0 40px 0;
 }
-.banner-text h1 {
-  font-size: 180px;
-  font-family: "Kaushan Script", cursive;
-}
-.banner-text p {
-  font-size: 20px;
-  font-style: italic;
-}
-.banner-btn {
-  margin: 70px auto 0;
-}
-.banner-btn a {
-  width: 150px;
-  text-decoration: none;
-  display: inline-block;
-  margin: 0 10px;
-  padding: 12px 0;
-  color: #fff;
-  border: 0.5px solid #fff;
+
+.todo-app {
+  background-color: var(--white);
+  width: 300px;
+  height: 350px;
+  border: 5px solid var(--yellow);
+  border-radius: 8px;
+  padding: 15px;
   position: relative;
-  z-index: 1;
-  transition: color 0.5s;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.banner-btn a span {
-  width: 0;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #fff;
-  z-index: -1;
+
+.btn {
+  cursor: pointer;
+  width: 100px;
+  margin: 10px;
+  color: var(--dark-grey);
+  background-color: var(--golden-yellow);
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border-color: var(--golden-yellow);
+  border-width: 3px;
 }
-.banner-btn a:hover span {
-  width: 100%;
-  transition: 0.5s;
+
+.btn:hover {
+  background-image: linear-gradient(#ffcc4c, #f89808);
 }
-.banner-btn a:hover {
-  color: #000;
+
+.large-btn {
+  width: 80%;
+  font-size: 1.2rem;
+  align-self: center;
+  justify-self: center;
 }
-#sideNav {
-  width: 250px;
-  height: 100vh;
-  position: fixed;
-  right: -250px;
-  top: 0;
-  background: #009688;
-  z-index: 2;
-  transition: 0.5s;
-}
-nav ul li {
-  list-style: none;
-  margin: 50px 20px;
-}
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-}
-#menuBtn {
-  width: 50px;
-  height: 50px;
-  background: #009688;
-  text-align: center;
-  position: fixed;
-  right: 30px;
-  top: 20px;
-  border-radius: 3px;
-  z-index: 3;
+
+.close-task-form-btn {
+  background: none;
+  border: none;
   cursor: pointer;
 }
-#menuBtn img {
+
+.close-icon {
   width: 20px;
-  margin-top: 15px;
+  height: 20px;
 }
+
+.task-form {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white);
+  border-radius: 5px;
+  padding: 15px;
+  width: 300px;
+  height: 350px;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.task-form-header {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.task-form-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.task-form-footer {
+  display: flex;
+  justify-content: center;
+}
+
+.task-form-label,
+#title-input,
+#date-input,
+#description-input {
+  display: block;
+}
+
+.task-form-label {
+  margin-bottom: 5px;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+#title-input,
+#date-input,
+#description-input {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 2px;
+}
+
+#confirm-close-dialog {
+  padding: 10px;
+  margin: 10px auto;
+  border-radius: 15px;
+}
+
+.confirm-close-dialog-btn-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.discard-message-text {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+#tasks-container {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.task {
+  margin: 5px 0;
+}
+
+.hidden {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .todo-app,
+  .task-form {
+    width: 400px;
+    height: 450px;
+  }
+
+  .task-form-label {
+    font-size: 1.5rem;
+  }
+
+  #title-input,
+  #date-input {
+    height: 2rem;
+  }
+
+  #title-input,
+  #date-input,
+  #description-input {
+    padding: 5px;
+    margin-bottom: 20px;
+  }
+}
+  
