--- a/firstweb.css
+++ b/firstweb.css
@@ -352,4 +352,24 @@ hr {
     top: 25%;
   }
 }
+.social-links {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
 
+.social-links a {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.social-links img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+
+.social-links img:hover {
+  transform: scale(1.2);
+}
