--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
   font-family: "Poppins", sans-serif;
 }
 #banner {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), #009866),
-    url(https://images.squarespace-cdn.com/content/v1/5fd787d32a8a4a2604b22b5d/a1a982a2-8886-4017-a735-3fde5aeab145/msbs-barbershop-perspective-22000.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #0098),
+    url(https://img.freepik.com/premium-photo/data-science-business-artificial-intelligence_553012-29126.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -66,7 +66,7 @@
   position: fixed;
   right: -250px;
   top: 0;
-  background: #009688;
+  background: #0098;
   z-index: 2;
   transition: 0.5s;
 }
@@ -81,7 +81,7 @@ nav ul li a {
 #menuBtn {
   width: 50px;
   height: 50px;
-  background: #009688;
+  background: #0098;
   text-align: center;
   position: fixed;
   right: 30px;
@@ -115,14 +115,14 @@ nav ul li a {
   margin: auto;
   font-size: 20px;
   font-weight: bold;
-  color: #009688;
+  color: #0098;
   position: relative;
   z-index: 1;
   display: inline-block;
 }
 .title-text p::after {
   content: "";
-  background: linear-gradient(#019587, #fff);
+  background: linear-gradient(#0098, #fff);
   width: 50px;
   height: 35px;
   position: absolute;
@@ -150,7 +150,7 @@ nav ul li a {
 .features-img {
   flex-basis: 50%;
   margin: auto;
-  color: #009688;
+  color: #0098;
 }
 .features-img img {
   width: 70%;
@@ -160,7 +160,7 @@ nav ul li a {
   text-align: left;
   margin-bottom: 10px;
   font-weight: 100%;
-  color: #009688;
+  color: #0098;
 }
 .features desc {
   display: flex;
@@ -216,7 +216,7 @@ nav ul li a {
   top: 0;
   border-radius: 7px;
   cursor: pointer;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), #009688);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #0098);
   opacity: 0;
   transition: 1s;
 }
@@ -279,7 +279,7 @@ hr {
   padding: 10px;
   margin-bottom: 30px;
   border-radius: 5px;
-  box-shadow: 0 10px 20px 3px #00968814;
+  box-shadow: 0 10px 20px 3px #0098;
   cursor: pointer;
   transition: transform 0.5s;
 }
@@ -297,7 +297,7 @@ hr {
   border-radius: 3px;
 }
 .user-info small {
-  color: #009866;
+  color: #0098;
 }
 .feedback-col:hover {
   transform: translateY(-7px);
