--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     margin-bottom: 10px;
 }
 
-.position, .contact-info, .address, .website {
+.position, .contact-info, .address, .email {
     font-size: 14px;
     margin-bottom: 5px;
 }
